# SEO-analysis

./: .gitignore  Makefile  README.md  cursor.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/examples/: keywords.csv  keywords_clusters.csv  keywords_intent.csv  seo_titles_meta.csv  serp_samples.csv
notebooks/: 01_intent_classification.ipynb  02_keyword_clustering.ipynb  03_title_meta_generation.ipynb  04_ner_entities.ipynb  05_summarization.ipynb  06_semantic_search.ipynb
src/: cli.py  cluster_keywords.py  extract_entities.py  generate_meta.py  intent_classifier.py  internal_linking.py  psi_snapshot.py  schema_org.py  semantic_search.py  sitemap_utils.py  summarize.py  utils.py
tests/: test_schema_org.py  test_sitemap_utils.py  test_utils.py
