[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-tools"
version = "0.1.0"
description = "Transformers + SEO utilities: intent, clustering, meta, NER, search, linking, sitemaps, PSI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "transformers>=4.44.0,<5.0.0",
  "sentence-transformers>=3.0.0,<6.0.0",
  "torch>=2.2.0,<2.10.0",
  "accelerate>=0.33.0,<2.0.0",
  "datasets>=2.19.0,<5.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "faiss-cpu>=1.7.4,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "tqdm>=4.66.0,<5.0.0",
  "httpx>=0.25.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
seo-tools = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
